test/integration/bad/new/missing-name.stan
data { array [ foo ] vector [ 24 ] &&
